test/libsolidity/syntaxTests/modifierAreas/visibility/invalid/redeclaration.sol
contract A {
    apply public private {}
}

// ----
// ParserError: (30-37): Visibility already specified as "public".
